# test_task

./: pyproject.toml
test_project/: db.sqlite3
test_project/learning_school/: admin.py  apps.py  models.py  serializers.py  views.py
test_project/learning_school/migrations/: 0001_initial.py
test_project/test_project/: settings.py  urls.py
